# edl

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTTING.md  Dockerfile  FAQ.md  LICENSE  OWNERS.md  README.md  RELEASE.md  edl_controller.yaml  glide.yaml  go.mod  go.sum  thirdpartyresource.yaml
python/: CMakeLists.txt  requirements.txt  setup.py  setup.py.in
python/collective/: edl_utils.py  launch.py
python/demo/: job_client_demo.py
python/demo/collective/: start_job_client.sh  start_job_server.sh
python/edl/: __init__.py  edl_utils.py  launch.py
python/edl/collective/: data_reader.py  dataset.py  distribute_reader.py  edl_utils.py  executor.py  launch.py  serializable.py  state.py  utils.py
python/edl/discovery/: consistent_hash.py  etcd_client.py  register.py  server_alive.py
python/edl/distill/: balance_table.py  discovery_client.py  discovery_server.py  distill_reader.py  distill_worker.py  timeline.py  utils.py
python/edl/liveft/: elastic.py  launch.py
python/edl/protos/: common.proto  data_server.proto  distill_discovery.proto  generate.sh  pod_server.proto  run_codegen.py
python/edl/utils/: args_utils.py  batch_data_accesser.py  batch_data_generator.py  checkoint.py  checkpoint.py  client.py  cluster.py  cluster_generator.py  cluster_watcher.py  constant.py  constants.py  data_filter.py  data_server.py  data_server_client.py  dist_reader_client.py  distribute_reader.py  edl_env.py  edl_process.py  edl_state.py  env.py  error_utils.py  etcd_db.py  etcd_utils.py  exceptions.py  file_utils.py  generate_cluster.py  global_vars.py  job_env.py  json_serializable.py  launcher.py  leader.py  leader_pod.py  leader_register.py  log_utils.py  network_utils.py  pb_utils.py  pod.py  pod_client.py  pod_server.py  pod_server_client.py  (+14 more)
python/paddle_edl/collective/: dataloader.py  dataset.py  edl_utils.py  (+3 more)
(+404 files in other folders)
